--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     
-    <input type="hidden" name="next" value="{% url 'index' %}">
+    <input type="hidden" name="next" value="{% url 'local:index' %}">
 </form>
 
 {% endblock content%}
