--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -23,7 +23,7 @@
     <button  name='submit' class="btn btn-primary">Adicionar</button>
     {% endbuttons%}
     
-    <input type="hidden" name="next" value="{% url 'index'%}"/>
+    <input type="hidden" name="next" value="{% url 'local:index'%}"/>
 </form>
 
 {% endblock content%}
