--- a/local/templates/local/new_local.html
+++ b/local/templates/local/new_local.html
@@ -1,47 +1,37 @@
-{%  extends "local/base.html"%}
-{% load bootstrap3%}
+{% extends "local/base.html" %}
+{% load bootstrap3 %}
 
-{% block header%}
-        <h2 style="margin-left: 200px;">Adicione um novo local</h2>
-{% endblock header%}
+{% block header %}
+    <h2 style="margin-left: 200px;">Adicione um novo local</h2>
+{% endblock header %}
 
-{% block content %} 
-
-
-<form action="{% url 'new_local'%}" method="post" class="form-horizontal">
-    {% csrf_token%}
+{% block content %}
+<form action="{% url 'local:new_local' %}" method="post" class="form-horizontal">
+    {% csrf_token %}
 
     <br><br>
-  
 
-        <!-- Campo de inscrição imobiliária-->
-        <div class="form-group">
-            <label for="id_insc" class="col-sm-2 control-label">Inscrição imobiliária</label>
-            <div class="col-sm-4">
-                <input type="text" name="insc" id="id_insc" class="form-control" placeholder="Digite a inscrição imobiliária">
-            </div>
+    <!-- Campo de inscrição imobiliária-->
+    <div class="form-group">
+        <label for="id_insc" class="col-sm-2 control-label">Inscrição imobiliária</label>
+        <div class="col-sm-4">
+            <input type="text" name="insc" id="id_insc" class="form-control" placeholder="Digite a inscrição imobiliária">
         </div>
+    </div>
 
-        <!-- Campo de endereco -->
-        <div class="form-group">
-            <label for="id_endereco" class="col-sm-2 control-label">Endereço</label>
-            <div class="col-sm-4">
-                <input type="text" name="endereco" id="id_endereco" class="form-control" placeholder="Digite o endereço do local">
-            </div>
+    <!-- Campo de endereco -->
+    <div class="form-group">
+        <label for="id_endereco" class="col-sm-2 control-label">Endereço</label>
+        <div class="col-sm-4">
+            <input type="text" name="endereco" id="id_endereco" class="form-control" placeholder="Digite o endereço do local">
         </div>
+    </div>
 
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-4">
-                <button name="submit" class="btn btn-primary">Adicionar</button>
-            </div>
+    <!-- Botão -->
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-4">
+            <button name="submit" class="btn btn-primary">Adicionar</button>
         </div>
-   
-
-
-
-    
+    </div>
 </form>
-
-{% endblock content%}
-
-
+{% endblock content %}
